--- a/index.html
+++ b/index.html
@@ -436,21 +436,24 @@
                             <p>
                                 <em>
                                     <b>
-                                       Techsmew Technologies ,Coimbatur
+                                        Techsmew Technologies ,Coimbatur
                                     </em>
                                 </b>
                             </em>
                         </p>
                         <ul>
-                          <li>Thrived in high-pressure environments, consistently delivering results within tight deadlines.</li>
-                          <li>Proficient in Agile methodology, driving collaborative development and iterative product delivery.</li>
-                          <li>Expertise in React Redux, leveraging its state management for scalable web applications.</li>
-                          <li>Skilled in Tailwind CSS and Prime React ,MUI ... for visually appealing and responsive UI design.</li>
-                          <li>Successful completion of React JS projects, building dynamic and interactive web applications.</li>
-                          <li>Continuously embracing new technologies for innovation and efficiency.</li>
-                          <li>Proactively engaged with clients, actively soliciting and gathering project requirements through effective communication and collaborative interactions.</li>
-                          <li>Continuously expanding expertise by actively integrating PHP Laravel to enhance backend functionalities, while also dedicating efforts to further mastering Next.js for dynamic web development.</li>
-                      </ul>
+                            <li>Thrived in high-pressure environments, consistently delivering results within tight deadlines.</li>
+                            <li>Proficient in Agile methodology, driving collaborative development and iterative product delivery.</li>
+                            <li>Expertise in React Redux, leveraging its state management for scalable web applications.</li>
+                            <li>
+                                Conducted code reviews and provided constructive feedback to team members, fostering a culture of continuous learning and improvement.
+                            </li>
+                            <li>Skilled in Tailwind CSS and Prime React ,MUI ... for visually appealing and responsive UI design.</li>
+                            <li>Successful completion of React JS projects, building dynamic and interactive web applications.</li>
+                            <li>Continuously embracing new technologies for innovation and efficiency.</li>
+                            <li>Proactively engaged with clients, actively soliciting and gathering project requirements through effective communication and collaborative interactions.</li>
+                            <li>Continuously expanding expertise by actively integrating PHP Laravel to enhance backend functionalities, while also dedicating efforts to further mastering Next.js for dynamic web development.</li>
+                        </ul>
                     </div>
                     <div class="resume-item">
                         <h4>Junior Web Developer</h4>
@@ -463,9 +466,12 @@
                         <ul>
                             <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                             <li>Gained work experience in commercial website building and programming languages</li>
+                            <li>Implemented responsive and user-friendly interfaces by utilizing HTML, CSS, and JavaScript frameworks like Bootstrap and jQuery.
+                            </li>
+                            <li>Ensured code quality and optimized performance by conducting thorough testing, debugging, and refactoring processes.
+                            </li>
                         </ul>
                     </div>
-                    
                 </div>
             </div>
         </div>
@@ -484,7 +490,7 @@
             <div class="section-title">
                 <h2>Portfolio</h2>
                 <p>
-                  As a Software Developer at Techs Mew Solutions in Coimbatore for the past Five months, I have gained valuable experience. Previously, I worked as a Software Intern at Maitexa Info Solutions in Kozhikode for six months, focusing on developing web applications using React, MERN stack, and Node.js.
+                    As a Software Developer at Techs Mew Solutions in Coimbatore for the past Five months, I have gained valuable experience. Previously, I worked as a Software Intern at Maitexa Info Solutions in Kozhikode for six months, focusing on developing web applications using React, MERN stack, and Node.js.
 
                   During my time at Maitexa Info Solutions, I honed my skills in UI development and creating reusable components using React. I also gained expertise in the MERN stack, enabling me to build efficient back-end systems. With a quick learning ability and strong problem-solving skills, I am confident that I am an ideal candidate for the Frontend Developer position.
                   
