--- a/portfolio-details7.html
+++ b/portfolio-details7.html
@@ -92,15 +92,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-7.jpg" alt="">
+                  <img src="assets/img/portfolio/cenet1jpg.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-7-2.jpg" alt="">
+                  <img src="assets/img/portfolio/cenet2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-7-3.jpg" alt="">
+                  <img src="assets/img/portfolio/cenet3.jpg" alt="">
                 </div>
 
               </div>
@@ -116,14 +116,13 @@
              
                 <li><strong>Project date</strong>: 28 November, 2022</li>
                 <li><strong>Tools Used</strong>:React js, CSS, Javascript</li>
-                <li><strong>Project URL</strong>: <a href="https://weatherforcast.onrender.com/">https://weatherforcast.onrender.com/</a></li>
+                <li><strong>Project URL</strong>: <a href="https://cenet-jpm.netlify.app/">https://cenet-jpm.netlify.app/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Project Details</h2>
               <p>
-               
-This is a project made to know the weather. Here api get method and post method are used to use the data. The user can find the seven days weather using this project.
+                This website is a clone of the CENET website and is built using React.js. 
 
               </p>
             </div>
