--- a/index.html
+++ b/index.html
@@ -600,6 +600,24 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                     <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/monero1.png" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a
+                                href="assets/img/portfolio/monero1.png"
+                                data-gallery="portfolioGallery"
+                                class="portfolio-lightbox"
+                                title="web 1"
+                            >
+                                <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="portfolio-details0.html" title="More Details">
+                                <i class="bx bx-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
                         <div class="portfolio-links">
                             <a
