--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4" data-aos="fade-right">
-                            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                            <img src="assets/img/IMG_2825-01.jpeg" class="img-fluid" alt="">
                         </div>
                         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                             <h3>Software Developer</h3>
@@ -152,11 +152,11 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <ul>
-                                        <li>
+                                        <!-- <li>
                                             <i class="bi bi-chevron-right"></i>
                                             <strong>Age:</strong>
                                             <span>24</span>
-                                        </li>
+                                        </li> -->
                                         <li>
                                             <i class="bi bi-chevron-right"></i>
                                             <strong>Degree:</strong>
