--- a/index.html
+++ b/index.html
@@ -152,11 +152,6 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <ul>
-                                        <!-- <li>
-                                            <i class="bi bi-chevron-right"></i>
-                                            <strong>Age:</strong>
-                                            <span>24</span>
-                                        </li> -->
                                         <li>
                                             <i class="bi bi-chevron-right"></i>
                                             <strong>Degree:</strong>
@@ -466,9 +461,11 @@
                         <ul>
                             <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                             <li>Gained work experience in commercial website building and programming languages</li>
-                            <li>Implemented responsive and user-friendly interfaces by utilizing HTML, CSS, and JavaScript frameworks like Bootstrap and jQuery.
+                            <li>
+                                Implemented responsive and user-friendly interfaces by utilizing HTML, CSS, and JavaScript frameworks like Bootstrap and jQuery.
                             </li>
-                            <li>Ensured code quality and optimized performance by conducting thorough testing, debugging, and refactoring processes.
+                            <li>
+                                Ensured code quality and optimized performance by conducting thorough testing, debugging, and refactoring processes.
                             </li>
                         </ul>
                     </div>
@@ -526,6 +523,24 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/cube1.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a
+                                href="assets/img/portfolio/cube1.jpg"
+                                data-gallery="portfolioGallery"
+                                class="portfolio-lightbox"
+                                title="web 1"
+                            >
+                                <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="portfolio-details12.html" title="More Details">
+                                <i class="bx bx-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
@@ -546,53 +561,17 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-                        <div class="portfolio-links">
-                            <a
-                                href="assets/img/portfolio/portfolio-3.jpg"
-                                data-gallery="portfolioGallery"
-                                class="portfolio-lightbox"
-                                title="App 2"
-                            >
-                                <i class="bx bx-plus"></i>
-                            </a>
-                            <a href="portfolio-details3.html" title="More Details">
-                                <i class="bx bx-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-                    <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
                         <div class="portfolio-links">
                             <a
                                 href="assets/img/portfolio/portfolio-4.jpg"
                                 data-gallery="portfolioGallery"
                                 class="portfolio-lightbox"
-                                title="Card 2"
+                                title="web 1"
                             >
                                 <i class="bx bx-plus"></i>
                             </a>
                             <a href="portfolio-details4.html" title="More Details">
-                                <i class="bx bx-link"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-                    <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-                        <div class="portfolio-links">
-                            <a
-                                href="assets/img/portfolio/portfolio-5.jpg"
-                                data-gallery="portfolioGallery"
-                                class="portfolio-lightbox"
-                                title="Web 2"
-                            >
-                                <i class="bx bx-plus"></i>
-                            </a>
-                            <a href="portfolio-details5.html" title="More Details">
                                 <i class="bx bx-link"></i>
                             </a>
                         </div>
@@ -606,7 +585,7 @@
                                 href="assets/img/portfolio/monero1.png"
                                 data-gallery="portfolioGallery"
                                 class="portfolio-lightbox"
-                                title="web 1"
+                                title=""
                             >
                                 <i class="bx bx-plus"></i>
                             </a>
@@ -616,25 +595,25 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio/tech1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-links">
                             <a
-                                href="assets/img/portfolio/portfolio-6.jpg"
+                                href="assets/img/portfolio/tech1.jpg"
                                 data-gallery="portfolioGallery"
                                 class="portfolio-lightbox"
-                                title="App 3"
+                                title="Card 2"
                             >
                                 <i class="bx bx-plus"></i>
                             </a>
-                            <a href="portfolio-details6.html" title="More Details">
+                            <a href="portfolio-details13.html" title="More Details">
                                 <i class="bx bx-link"></i>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/cenet1jpg.jpg" class="img-fluid" alt="">
                         <div class="portfolio-links">
@@ -642,11 +621,66 @@
                                 href="assets/img/portfolio/cenet1jpg.jpg"
                                 data-gallery="portfolioGallery"
                                 class="portfolio-lightbox"
-                                title="Card 1"
+                                title="Web 2"
                             >
                                 <i class="bx bx-plus"></i>
                             </a>
                             <a href="portfolio-details7.html" title="More Details">
+                                <i class="bx bx-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a
+                                href="assets/img/portfolio/portfolio-3.jpg"
+                                data-gallery="portfolioGallery"
+                                class="portfolio-lightbox"
+                                title="web 1"
+                            >
+                                <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="portfolio-details3.html" title="More Details">
+                                <i class="bx bx-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+          
+                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a
+                                href="assets/img/portfolio/portfolio-5.jpg"
+                                data-gallery="portfolioGallery"
+                                class="portfolio-lightbox"
+                                title="App 3"
+                            >
+                                <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="portfolio-details5.html" title="More Details">
+                                <i class="bx bx-link"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-links">
+                            <a
+                                href="assets/img/portfolio/portfolio-6.jpg"
+                                data-gallery="portfolioGallery"
+                                class="portfolio-lightbox"
+                                title="Card 1"
+                            >
+                                <i class="bx bx-plus"></i>
+                            </a>
+                            <a href="portfolio-details6.html" title="More Details">
                                 <i class="bx bx-link"></i>
                             </a>
                         </div>
