--- a/portfolio-details12.html
+++ b/portfolio-details12.html
@@ -9,10 +9,13 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+ 
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
+  
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -28,7 +31,9 @@
 
 <body>
 
+
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+
 
   <header id="header">
     <div class="d-flex flex-column">
@@ -55,12 +60,12 @@
           
           <li><a href="index.html" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
-      </nav>
+      </nav><!-- .nav-menu -->
     </div>
   </header>
 
-
   <main id="main">
+
 
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
@@ -74,7 +79,9 @@
         </div>
 
       </div>
-    </section>
+    </section><!-- End Breadcrumbs -->
+
+    <!-- ======= Portfolio Details Section ======= -->
     <section id="portfolio-details" class="portfolio-details">
       <div class="container">
 
@@ -85,15 +92,18 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-9.jpg" alt="">
+                  <img src="assets/img/portfolio/cube1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9-2.jpg" alt="">
+                  <img src="assets/img/portfolio/cube2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9-3.jpg" alt="">
+                  <img src="assets/img/portfolio/cube3.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/cube4.jpg" alt="">
                 </div>
 
               </div>
@@ -107,15 +117,17 @@
               <ul>
                 <li><strong>Category</strong>: Web design</li>
              
-                <li><strong>Project date</strong>: 29 Agust, 2022</li>
-                <li><strong>Tools Used</strong>:HTML 5, CSS,</li>
-                <li><strong>Project URL</strong>: <a href="#">This project is not yet hosted</a></li>
+                <li><strong>Project date</strong>: 2 October, 2022</li>
+                <li><strong>Tools Used</strong>:React js, CSS, Javascript</li>
+                <li><strong>Project URL</strong>: <a href="https://www.cubesimple.com/">https://www.cubesimple.com/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Project Details</h2>
               <p>
-                This is a website built using html, bootstrap and css. This is a demo project. It is responsive on all screens like mobile, laptop, tab etc.
+                Company website for CubeSimple, empowering businesses through digital transformation.
+                Developed responsive user interfaces using React.js and Tailwind CSS, collaborating
+                closely with the Laravel backend team.
               </p>
             </div>
           </div>
@@ -133,7 +145,7 @@
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
- 
+
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -143,7 +155,6 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
 
   <script src="assets/js/main.js"></script>
 
