--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 <div class="container">
                     <div class="section-title">
                         <h2>Resume</h2>
-                        <p>An enthusiastic engineering fresher who is a self-starter and capable to use technical skills for the betterment of the organization. A Bachelor’s degree in Software Engineering has enhanced my proficiency in developing web applications and looking forward to work in a competitive environment that enhances overall learning.</p>
+                        <p>As a dedicated software engineer with 1.2 years of valuable experience, I am a self-starter who is passionate about leveraging technical skills to contribute to the growth and success of organizations. Holding a Bachelor's degree in Software Engineering, I have honed my expertise in developing web applications. I am now eager to thrive in a dynamic and competitive work environment that fosters continuous learning and innovation.</p>
                     </div>
                     <div class="row">
                         <div class="col-lg-6" data-aos="fade-up">
@@ -427,7 +427,7 @@
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item">
                             <h4>Software Developer</h4>
-                            <h5> Present</h5>
+                            <h5>January 2023 -Present</h5>
                             <p>
                                 <em>
                                     <b>
